--- a/package.json
+++ b/package.json
@@ -51,9 +51,16 @@
     "rollup": "^2.45.2",
     "rollup-jest": "^1.1.1",
     "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "jest": {
     "preset": "rollup-jest"
