--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kingfor/forms",
+  "name": "@kingford/forms",
   "version": "1.0.0",
   "description": "<!--  * @Author: kingford  * @Date: 2021-04-16 09:39:51  * @LastEditTime: 2021-04-16 09:40:11 -->",
   "module": "es/index.js",
