--- a/package.json
+++ b/package.json
@@ -1,24 +1,51 @@
 {
-  "name": "kingford",
-  "version": "1.0.0",
-  "description": "A form npm package  tools",
-  "main": "commitlint.config.js",
-  "scripts": {
-    "prepare": "husky install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/skingford/kingford.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/skingford/kingford/issues"
-  },
-  "homepage": "https://github.com/skingford/kingford#readme",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "husky": "^6.0.0"
+    "@rollup/plugin-alias": "^3.1.2",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-eslint": "^8.0.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.26.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.23.2",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "rollup": "^2.48.0",
+    "rollup-jest": "^1.1.1",
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-terser": "^7.0.2"
+  },
+  "devEngines": {
+    "node": "^12.17.0 || 13.x || 14.x || 15.x || 16.x"
+  },
+  "jest": {
+    "preset": "rollup-jest"
+  },
+  "scripts": {
+    "start": "rollup -w --environment NODE_ENV:development -c scripts/build/rollup.config.dev.js",
+    "dev": "rollup -w --environment NODE_ENV:development -c scripts/build/rollup.config.dev.js",
+    "build": "rollup --environment NODE_ENV:production -c scripts/build/rollup.config.prod.js",
+    "lint": "eslint src",
+    "fix": "npm run lint --fix",
+    "commit": "git-cz",
+    "test": "jest",
+    "test:c": "jest --coverage"
   }
 }
