--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "node": "^12.17.0 || 13.x || 14.x || 15.x || 16.x"
   },
   "jest": {
-    "preset": "rollup-jest"
+    "testRegex": "/packages/.*.test.js?$"
   },
   "scripts": {
     "start": "rollup -w --environment NODE_ENV:development -c scripts/build/rollup.config.dev.js",
