--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-replace": "^3.0.0",
+    "brotli": "^1.3.2",
+    "chalk": "^4.1.2",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
@@ -22,8 +24,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
+    "execa": "^5.1.1",
+    "fs-extra": "^10.0.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "minimist": "^1.2.5",
     "rollup": "^2.55.1",
     "rollup-jest": "^1.1.2",
     "rollup-plugin-clear": "^2.0.7",
@@ -39,12 +44,8 @@
     "testRegex": "/packages/.*.test.js?$"
   },
   "scripts": {
-    "dev": "rollup -w --environment NODE_ENV:development -c scripts/build/rollup.config.dev.js",
-    "build": "rollup --environment NODE_ENV:production -c scripts/build/rollup.config.prod.js",
-    "lint": "eslint src",
-    "fix": "npm run lint --fix",
-    "commit": "git-cz",
-    "test": "jest",
-    "test:c": "jest --coverage"
+    "dev": "node scripts/build/dev.js",
+    "build": "node scripts/build/build.js",
+    "lint": "eslint --ext .ts packages/*/src/**.ts"
   }
 }
