--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "printWidth": 100,
+  "semi": false,
+  "printWidth": 80,
   "singleQuote": true,
   "trailingComma": "none",
   "arrowParens": "avoid",
