--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
-    "commit-msg": "node scripts/verifyCommit.js"
+    "commit-msg": "node scripts/build/verifyCommit.js"
   },
   "lint-staged": {
     "*.js": [
@@ -32,38 +32,42 @@
     "node": "^12.17.0 || 13.x || 14.x || 15.x || 16.x"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.9",
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@rollup/plugin-alias": "^3.1.5",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-eslint": "^8.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-replace": "^3.0.0",
+    "@babel/types": "^7.12.0",
+    "@microsoft/api-extractor": "^7.15.1",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-replace": "^2.3.4",
+    "@types/hash-sum": "^1.0.0",
+    "@types/jest": "^26.0.16",
+    "@types/node": "^16.4.7",
+    "@types/puppeteer": "^5.0.0",
+    "@typescript-eslint/parser": "^4.1.1",
     "brotli": "^1.3.2",
-    "chalk": "^4.1.2",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "execa": "^5.1.1",
-    "fs-extra": "^10.0.0",
-    "husky": "^7.0.1",
-    "jest": "^27.0.6",
-    "minimist": "^1.2.5",
-    "rollup": "^2.55.1",
-    "rollup-jest": "^1.1.2",
-    "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-filesize": "^9.1.1",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "chalk": "^4.1.0",
+    "conventional-changelog-cli": "^2.0.31",
+    "csstype": "^3.0.3",
+    "enquirer": "^2.3.2",
+    "eslint": "^7.7.0",
+    "execa": "^4.0.2",
+    "fs-extra": "^9.0.1",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.10",
+    "minimist": "^1.2.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.3.1",
+    "puppeteer": "^10.0.0",
+    "rollup": "~2.38.5",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-polyfill-node": "^0.6.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "semver": "^7.3.2",
+    "serve": "^12.0.0",
+    "ts-jest": "^26.2.0",
+    "typescript": "^4.2.2",
+    "yorkie": "^2.0.0"
   },
   "jest": {
     "testRegex": "/packages/.*.test.js?$"
