--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/skingford/kingford.git"
+    "url": "git+https://github.com/skingford/kingford.git"
   },
   "keywords": [
     "validator"
@@ -36,5 +36,7 @@
     "url": "https://github.com/skingford/kingford/issues"
   },
   "homepage": "https://github.com/skingford/kingford#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "@vue/runtime-dom": "^3.1.5"
+  }
 }
