--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .ts packages/*/src/**.ts",
     "size": "node scripts/build/build.js jin runtime-dom size-check -p -f global",
     "format": "prettier --write --parser typescript \"packages/**/*.ts?(x)\"",
+    "open": "open http://localhost:5000/packages/template-explorer/local.html",
     "test": "node scripts/build/build.js jin -f global -d && jest --runInBand",
     "test-dts": "node scripts/build/build.js shared reactivity runtime-core runtime-dom -dt -f esm-bundler && yarn test-dts-only",
     "test-dts-only": "tsc -p ./test-dts/tsconfig.json && tsc -p ./test-dts/tsconfig.build.json"
