--- a/packages/jin/package.json
+++ b/packages/jin/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0-beta.1",
   "description": "<!--  * @Author: kingford  * @Date: 2021-05-19 09:39:51  * @LastEditTime: 2021-05-19 10:40:11 -->",
   "main": "index.js",
-  "module": "dist/jin.runtime.esm-bundler.js",
+  "module": "dist/jin.esm-bundler.js",
   "types": "dist/jin.d.ts",
   "unpkg": "dist/jin.global.js",
   "jsdelivr": "dist/jin.global.js",
